# Delaunay-Voronoi-Visualizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.h  resources.qrc
Core/: edge.cpp  edge.h  scenecontroller.cpp  scenecontroller.h  system.cpp  system.h  triangle.cpp  triangle.h  types.cpp  types.h
UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
UI/Widgets/: toolbar.cpp  toolbar.h  view.cpp  view.h
